# 20260209schwab

./: .gitignore  .version.txt  apod.py  apod_api_key.txt  apod_downloads_async.py  card.py  carddeck.py  classes_carddeck.html  colors.txt  comprehensions.py  custom_sorting.py  decorator_example.py  fun_with_dates.py  function_examples.py  geof1.py  geof2.py  jokerdeck.py  os_module.py  packages_carddeck.html  pygrep.py  refresher.py  script_template.py  simple_class_examples.py  subprocess_examples.py  tuple_examples.py  use_animals.py  variable_scope.py  walking_folders.py
ANSWERS/: all_python_lines.py  copy_files.py  cpresidents.py  fun_with_dates.py  gpresinfo.py  jpresidents.py  oldest_file.py  path_files.py  potus_amb_main.py  potus_main.py  pres_dates.py  pres_dates_amb.py  wiki_links_requests.py  xpresidents.py  youngest_pres.py  ypresidents.py
DATA/: knights.csv  presidents.json  presidents.yaml
EXAMPLES/: basic_sorting.py  binary_vs_text.py  calendar_2026.html  calendar_html.py  calendar_text.py  csv_dictreader.py  csv_nonstandard.py  csv_read.py  csv_write.py  csv_writerows.py  databaseconnection.py  date_parsing_easy.py  date_parsing_tz.py  date_time_conversion.py  datetime_ex.py  datetime_fmt.py  datetime_parse.py  dateutil_timezones.py  db_alternate_cursors.py  db_db2_dict_cursor.py  db_mssql_basics.py  db_mysql_basics.py  db_mysql_dict_cursor.py  db_mysql_fetch.py  db_mysql_metadata.py  (+55 more)
animals/: README.md  pyproject.toml
animals/docs/source/: conf.py  index.rst
animals/src/animals/: __init__.py  animals.py
animals/tests/: test_animals.py
(+30 files in other folders)
