[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# the above is required

[project]
name = "animals"
version = "1.0.0"
authors = [
    { name="John Strickler", email="jstrickler@gmail.com" },
]
description = "Modules about specific animals"
readme = "README.rst"
requires-python = ">=3.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
#    'roman >= 3.0',
#    'requests[security] < 3',
#    'subprocess32; python_version < "3.2"',
]





